--- a/OzonAlerts/apperance testing.html
+++ b/OzonAlerts/apperance testing.html
@@ -16,7 +16,7 @@
 
   <body>
     
-    <script type="text/javascript" src="OzonAlerts.js">
+    <script type="text/javascript" src="OzoneAlerts.js">
       
       Ozon.fire("success", "Du har blitt registrert!", "top-left");
     </script>
